--- a/template/web/index.html
+++ b/template/web/index.html
@@ -13,7 +13,7 @@
     <style>
         html, body {
             -ms-touch-action: none;
-            background: #888888;
+            background: #ffffff;
             padding: 0;
             border: 0;
             margin: 0;
@@ -27,7 +27,7 @@
          data-entry-class="Main"
          data-orientation="portrait"
          data-scale-mode="fixedHeight"
-         data-frame-rate="30"
+         data-frame-rate="60"
          data-content-width="640"
          data-content-height="1024"
          data-show-paint-rect="false"
